data/derived/sp14/progs/unify/prog3342.ml.out
Characters 588-591:
  if (truncate (100 *. (eval (e1, x, y)))) mod 5 = 0 then
                ^^^
Error: This expression has type int but an expression was expected of type
         float
